--- a/Index.html
+++ b/Index.html
@@ -8,14 +8,14 @@
 <body>
     <!-- Navbar -->
     <header style="background-color: #333; color: white; padding: 1rem; text-align: center;">
-        <h1>Welcome to the Club</h1>
+        <h1>Welcome to the Group 3 Dashboard</h1>
     </header>
 
     <!-- Sidebar and Main Content Layout -->
     <div style="display: flex;">
         <!-- Sidebar -->
         <aside style="width: 20%; background-color: #f4f4f4; padding: 1rem;">
-            <h2>Navigation</h2>
+            <h2>Menu</h2>
             <ul style="list-style-type: none; padding: 0;">
                 <li><a href="Home.html">Home</a></li>
                 <li><a href="Profile.html">Profile</a></li>
